# cpp-hw

./: .gitignore
lab1/: CMakeLists.txt  ConsoleApplication1.cpp  file_creater.cpp  file_creater.hpp  lex_analyzer.cpp  lex_analyzer.hpp  main.cpp  test.txt
lab2/: CMakeLists.txt  main.cpp
lab2/.cache/clangd/index/: main.cpp.5618C351787C3742.idx
lab2/lib/: NumberManipulator.cpp  NumberManipulator.hpp  common.cpp  logger.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/lib/: NumberManipulator.cpp  NumberManipulator.hpp  common.cpp  common.hpp  logger.cpp  logger.hpp
lab3/pipeline/: pipeline.cpp  pipeline.hpp
lab4/: CMakeLists.txt  main.cpp
lab4/sparse/: SparseVecMatrix.hpp  SparseVector.hpp
